<resources>
    <string name="app_name">MenuProject</string>
<!--    For calling-->
    <string name="btn_call">Phone</string>
    <string name="call_number">9735369240</string>
<!--For messaging-->
    <string name="btn_sms">SMS</string>
    <string name="textnumber">9735369240</string>
    <string name="msgbody">Type your text</string>

    <string name="weburl">https://portal5.pace.edu/</string>
<!--    Share-->
    <string name="btn_share">share</string>
    <string name="share_text_subject">Share the love</string>
    <string name="msg_heading">Share the love</string>
    <string name="msg_body">Just sharing the love</string>
<!--    Activity-->
    <string name="txt_activity">Activity</string>
    <string name="name">Hello! Your are in a new activity</string>
    <string name="hello">Hello</string>
    <string name="new_activity">New Activity</string>
    <string name="item1">help</string>
    <string name="item2">settings</string>
    <string name="help">Help</string>
    <string name="labelhelp">Help label</string>
    <string name="maps">maps</string>
    <string name="pace_portal">Pace Portal</string>


</resources>